@@ -1,3 +1,11 @@
+Tue Jan 31 14:41:31 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
+        * DAnCE/NodeManager/NodeManager_Impl.cpp
+        
+          Fixed a couple of warning on SuSE_10_0_GCC4.0.2_x86_64_Valgrind
+          build.
+
 Tue Jan 31 11:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/NodeManager/NodeManager_Impl.cpp:
